--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.475.0",
     "mongodb": "^6.8.0",
     "next": "15.3.3",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
