--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@genkit-ai/googleai": "^1.14.1",
     "@genkit-ai/next": "^1.14.1",
     "@hookform/resolvers": "^4.1.3",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -45,7 +46,7 @@
     "genkit": "^1.14.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
-    "mongodb": "^6.8.0",
+    "mongodb": "^5.9.2",
     "next": "15.3.3",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
